# wasmify-sophia

./: .gitignore  Cargo.toml  LICENSE  MatchingInterfaces.md  README.md  franz_database.turtle  index.html  latticeddataset.dot  notes.md  wasm_example.d.ts  wasm_example.js  wasm_example_bg.d.ts
bjdatasets/: Cargo.toml
bjdatasets/src/: btreeddataset.rs  fulldataset.rs  lib.rs  rcquad.rs  treedataset.rs  treeddataset.rs  treedstructure.rs  vecordataset.rs
fr/: 2020-03-20_presentation_equipe.odp
gist/: BindingEnums.rs  ExportPolylmorphism.rs  sophia_dataset_benchmark.rs
identifier-forest/: Cargo.toml
identifier-forest/benches/: main.rs
identifier-forest/generators/: _generator_insert_for_test.py  tree4_dynamic.py  tree4_profiles.py
identifier-forest/src/: _generator_spog.py  _generator_tree_enum.py  _obsolete_identifier_quad.rs  data_generator.py  forest.rs  generated.rs  generator.py  generator2.py  identifier.rs  identifier_quad.rs  lib.rs  once_treeblock.rs  order.rs  position.rs  queryable_tree.rs  tree_enum.rs  tree_predefined.rs  tree_trait.rs
identifier-forest/src/compile_time_forest/: mod.rs  profile4.rs
identifier-forest/src/order/: _order.rs  _position.rs  mod.rs  order.rs  position.rs
identifier-forest/src/run_time_forest/: _dynamic.rs  mod.rs
identifier-forest/src/tree/: _tree_predefined.rs  _tree_trait.rs  mod.rs  tree_enum.rs
notes/: BenchmarkingSophia.md  IndexNotes.md  IndexedWrapperAugmenting.md  StreamingRio.md  benchmark_query_po.csv  benchmark_query_pog.csv  benchmark_query_s.csv  benchmark_query_sg.csv
notes/rustvsjs/: CompareTarget.ipynb  README.md
notes/rustvsjs/matchforeach/: fillforeach_query-sophia.csv  fillforeach_query-sophia_full.csv  fillforeach_query-sophia_js.csv  fillforeach_query-sophia_js_full.csv  fillforeach_query-sophia_js_lg.csv  fillforeach_query-sophia_js_tree.csv  fillforeach_query-sophia_lg.csv  fillforeach_query-sophia_tree.csv  fillforeach_query2-sophia.csv  fillforeach_query2-sophia_full.csv  fillforeach_query2-sophia_js.csv  fillforeach_query2-sophia_js_full.csv  fillforeach_query2-sophia_js_lg.csv  fillforeach_query2-sophia_js_tree.csv  fillforeach_query2-sophia_lg.csv  fillforeach_query2-sophia_tree.csv  fillforeach_query3-sophia.csv  fillforeach_query3-sophia_full.csv  fillforeach_query3-sophia_js.csv  fillforeach_query3-sophia_js_full.csv  fillforeach_query3-sophia_js_lg.csv  fillforeach_query3-sophia_js_tree.csv  fillforeach_query3-sophia_lg.csv  fillforeach_query3-sophia_tree.csv  fillforeach_query4-sophia.csv  fillforeach_query4-sophia_full.csv  fillforeach_query4-sophia_js.csv  fillforeach_query4-sophia_js_full.csv  fillforeach_query4-sophia_js_lg.csv  fillforeach_query4-sophia_js_tree.csv  fillforeach_query4-sophia_lg.csv  fillforeach_query4-sophia_tree.csv  main.rs  main_2.rs  query-sophia.csv  query-sophia_full.csv  query-sophia_js.csv  query-sophia_js_full.csv  query-sophia_js_lg.csv  query-sophia_js_tree.csv  (+27 more)
notes/rustvsjs/witharray/: fillforeach_query-sophia.csv  fillforeach_query-sophia_A.csv  fillforeach_query-sophia_array.csv  fillforeach_query-sophia_full.csv  fillforeach_query-sophia_full_A.csv  fillforeach_query-sophia_js.csv  fillforeach_query-sophia_js_A.csv  fillforeach_query-sophia_js_A_full.csv  fillforeach_query-sophia_js_A_lg.csv  fillforeach_query-sophia_js_A_tree.csv  fillforeach_query-sophia_js_array.csv  fillforeach_query-sophia_js_full.csv  fillforeach_query-sophia_js_graphy.csv  fillforeach_query-sophia_js_lg.csv  fillforeach_query-sophia_js_tree.csv  fillforeach_query-sophia_lg.csv  fillforeach_query-sophia_lg_A.csv  fillforeach_query-sophia_tree.csv  fillforeach_query-sophia_tree_A.csv  fillforeach_query2-sophia.csv  fillforeach_query2-sophia_A.csv  fillforeach_query2-sophia_array.csv  fillforeach_query2-sophia_full.csv  fillforeach_query2-sophia_full_A.csv  fillforeach_query2-sophia_js.csv  fillforeach_query2-sophia_js_A.csv  fillforeach_query2-sophia_js_A_full.csv  fillforeach_query2-sophia_js_A_lg.csv  fillforeach_query2-sophia_js_A_tree.csv  fillforeach_query2-sophia_js_array.csv  fillforeach_query2-sophia_js_full.csv  fillforeach_query2-sophia_js_graphy.csv  fillforeach_query2-sophia_js_lg.csv  fillforeach_query2-sophia_js_tree.csv  fillforeach_query2-sophia_lg.csv  fillforeach_query2-sophia_lg_A.csv  fillforeach_query2-sophia_tree.csv  fillforeach_query2-sophia_tree_A.csv  fillforeach_query3-sophia.csv  fillforeach_query3-sophia_A.csv  (+36 more)
sophia-wasm/: .gitignore  Cargo.toml  buildpkg.py  index.js  package.json  run_server.sh
sophia-wasm/pkg/: wrapper.js
sophia-wasm/src/: arrydataset.rs  btreeddataset.rs  btreeddataset_anti.rs  datamodel_factory.rs  datamodel_quad.rs  datamodel_term.rs  dataset.rs  dataset_core.rs  dataset_exportableconcrete.rs  dataset_exportableds.rs  dataset_exportablemacro.rs  dataset_into_vector_wrapper.rs  dataset_macro.rs  exportiterator.rs  fulldataset.rs  lib.rs  sortabledataset.rs  vecordataset.rs
sophia-wasm/src/datamodel/: factory.rs  mod.rs  quad.rs
sophia-wasm/src/wrappers_example/: btreeddataset_anti.rs  dataset_into_vector_wrapper.rs  mod.rs
sophia-wasm/src/wrapping/: default.rs  exportable_dataset.rs  macro_to_wasm.rs  mod.rs
sophia-wasm/test/: Dataset.js  DatasetCore.js  LICENSE.md  index.js  quad.js  test.js
wasm_example/: .gitignore  Cargo.toml  graph.html  index.html  index.js  js_integrate_polymorphism.py  package.json  run_server.sh  style.css  terms.html
wasm_example/src/: arrydataset.rs  btreeddataset.rs  datamodel_factory.rs  datamodel_quad.rs  datamodel_term.rs  dataset_core.rs  dataset_corearry.rs  dataset_macro.rs  exportiterator.rs  fulldataset.rs  index.js  latticedataset.rs  lib.rs  macro_wrapper.rs  matchableterm.rs  parser.rs  util.rs
wasm_example/test/: Dataset.js  DatasetCore.js  LICENSE.md  index.js
