[package]
name = "bjdatasets"
version = "0.1.0"
authors = ["BruJu <bruyat.ju@live.fr>"]
edition = "2018"

[dependencies]
sophia      = { git = "https://github.com/pchampin/sophia_rs", rev = "7bec393f81d765455fab149022abaa85ce1ec861", optional = true, features = ["test_macro"] }
sophia_term = { git = "https://github.com/pchampin/sophia_rs", rev = "7bec393f81d765455fab149022abaa85ce1ec861", optional = true }

once_cell = "1.3.1"
arr_macro = "0.1.3"

[features]
default     = [ "impl_sophia" ]
impl_sophia = [ "sophia", "sophia_term" ]
