[package]
name = "bjdatasets"
version = "0.1.0"
authors = ["BruJu <bruyat.ju@live.fr>"]
edition = "2018"

[dependencies]
identifier_forest = { path = "../identifier-forest" }

sophia      = { git = "https://github.com/pchampin/sophia_rs", rev = "7bec393f81d765455fab149022abaa85ce1ec861", features = ["test_macro"] }
sophia_term = { git = "https://github.com/pchampin/sophia_rs", rev = "7bec393f81d765455fab149022abaa85ce1ec861"}

once_cell = "1.3.1"
arr_macro = "0.1.3"
