[package]
name = "identifier_forest"
version = "0.2.0"
authors = ["Julian Bruyat <bruyat.ju@live.fr>", "Pierre-Antoine Champin <pierre-antoine.champin@ercim.eu>"]
edition = "2018"

[dependencies]
once_cell = "1.3.1"
static_assertions = "1.1.0"

[dev-dependencies]
criterion = "0.3.3"
if_pac = { package = "identifier_forest", git = "https://github.com/pchampin/Portable-Reasoning-in-Web-Assembly", branch = "new_api" }

[[bench]]
name = "main"
harness = false