[package]
name = "sophia-wasm"
version = "0.1.0"
authors = ["BruJu <bruyat.ju@live.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
# wee_alloc = { version = "0.4.2", optional = true }

sophia = { git = "https://github.com/pchampin/sophia_rs", rev = "7bec393f81d765455fab149022abaa85ce1ec861", features = ["test_macro"] }
sophia_term = { git = "https://github.com/pchampin/sophia_rs", rev = "7bec393f81d765455fab149022abaa85ce1ec861" }
js-sys = "0.3.36"
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }
maybe-owned = "0.3.2"
rand = "0.7.3"
paste = "0.1.18"
bjdatasets = { path = "../bjdatasets", features = ["impl_sophia"] }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
