[package]
name = "sophia-wasm"
version = "0.1.0"
authors = ["BruJu <bruyat.ju@live.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bjdatasets  = { path = "../bjdatasets", features = ["impl_sophia"] }

sophia      = { git = "https://github.com/pchampin/sophia_rs", rev = "7bec393f81d765455fab149022abaa85ce1ec861", features = ["test_macro"] }
sophia_term = { git = "https://github.com/pchampin/sophia_rs", rev = "7bec393f81d765455fab149022abaa85ce1ec861" }

wasm-bindgen = "=0.2.65"
js-sys = "0.3.36"

console_error_panic_hook = { version = "0.1.1", optional = true }
maybe-owned = "0.3.2"
paste = "0.1.18"
rand = "0.7.3"
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
