[package]
name = "wasm_example"
version = "0.1.0"
authors = ["David Pojunas <davidapojunas@gmail.com>", "Julian Bruyat <julian@bruy.at>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
#sophia = { git = "https://github.com/bruju/sophia_rs", rev = "77976a5853bd6faa4021b6bf032187fb39348307" }
#sophia = { git = "https://github.com/bruju/sophia_rs" }
sophia = { path = "../../sophia_rs/sophia/", features = ["test_macro"] }
sophia_term = { path = "../../sophia_rs/term/" }
js-sys = "0.3.36"
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }
maybe-owned = "0.3.2"
once_cell = "1.3.1"
arr_macro = "0.1.3"

[patch.crates-io]
sophia_term = { path = "../../sophia_rs/term/" }
