[package]
name = "wasm_example"
version = "0.1.0"
authors = ["David Pojunas <davidapojunas@gmail.com>", "Julian Bruyat <julian@bruy.at>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
#sophia = { path = "../../sophia_rs/sophia/", features = ["test_macro"] }
#sophia_term = { path = "../../sophia_rs/term/" }
sophia = { git = "https://github.com/pchampin/sophia_rs", rev = "7bec393f81d765455fab149022abaa85ce1ec861", features = ["test_macro"] }
sophia_term = { git = "https://github.com/pchampin/sophia_rs", rev = "7bec393f81d765455fab149022abaa85ce1ec861" }
js-sys = "0.3.36"
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }
maybe-owned = "0.3.2"
once_cell = "1.3.1"
arr_macro = "0.1.3"
